<resources>
    <string name="app_name">Tritendence</string>
    <string name="EMAIL">E-Mail</string>
    <string name="PASSWORD">Heslo</string>
    <string name="SIGN_IN">Prihlásenie</string>
    <string name="REGISTRATION_NOTE">Ešte nemáte konto? Zaregistrujte sa!</string>
    <string name="REGISTRATION">Registrácia</string>
    <string name="SIGN_IN_NOTE">Uz máte konto? Prihláste sa!</string>
    <string name="REGISTRATION_NAME">Meno</string>
    <string name="REGISTRATION_SURNAME">Priezvisko</string>
    <string name="REGISTRATION_SPORT">Šport</string>
    <string name="PASSWORD_CHECK">Potvrdenie hesla</string>
    <string name="SWIMMING">Plávanie</string>
    <string name="ATHLETICS">Atletika</string>
    <string name="CYCLING">Cyklistika</string>
    <string name="SWIMMING_DB">Swimming</string>
    <string name="ATHLETICS_DB">Athletics</string>
    <string name="CYCLING_DB">Cycling</string>
    <string name="GROUPS">Skupiny</string>
    <string name="ATTENDANCE">Dochádzka</string>
    <string name="PROFILE">Používateľ</string>
    <string name="ATHLETES">Športovci</string>
    <string name="MONDAY">Pondelok</string>
    <string name="TUESDAY">Utorok</string>
    <string name="WEDNESDAY">Streda</string>
    <string name="THURSDAY">Štvrtok</string>
    <string name="FRIDAY">Piatok</string>
    <string name="SATURDAY">Sobota</string>
    <string name="SUNDAY">Nedeľa</string>
    <string name="MONDAY_DB">Monday</string>
    <string name="TUESDAY_DB">Tuesday</string>
    <string name="WEDNESDAY_DB">Wednesday</string>
    <string name="THURSDAY_DB">Thursday</string>
    <string name="FRIDAY_DB">Friday</string>
    <string name="SATURDAY_DB">Saturday</string>
    <string name="SUNDAY_DB">Sunday</string>
    <string name="MONDAY_DATE">MONDAY</string>
    <string name="SUNDAY_DATE">SUNDAY</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ATTENDANCE_CONFIRMATION">Potvrdiť dochádzku</string>
    <string name="CATEGORY">Kategória</string>
    <string name="MEMBERS">Zoznam členov</string>
    <string name="WRONG_SIGN_IN_DATA">Zadané údaje nie sú správne.</string>
    <string name="PASSWORD_REQUIRED">Je potrebné zadať heslo.</string>
    <string name="REQUIRED_DATA_MISSING">Je nutné vyplniť potrebné údaje.</string>
    <string name="NOT_ACCEPTABLE_EMAIL">Zadaný e-mail nie je možné akceptovať.</string>
    <string name="EMPTY_STRING"> </string>
    <string name="REQUIRED_MATCH_OF_PASSWORDS">Zadané heslá sa musia zhodovať.</string>
    <string name="TOO_SHORT_PASSWORD">Heslo musí pozostávať minimálne zo 6 znakov.</string>
    <string name="EMPTY_FIELDS">Je potrebné vyplniť všetky údaje.</string>
    <string name="NO_SPORT_SELECTED">Je potrebné vybrať jeden z dostupných športov.</string>
    <string name="SUCCESSFUL_REGISTRATION">Úspešná registrácia.</string>
    <string name="UNSUCCESSFUL_REGISTRATION">Neúspešná registrácia.</string>
    <string name="SIGNED_TRAINER">Prihlásený tréner</string>
    <string name="NUMBER_OF_TRAINING_UNITS">Počet odtrénovaných hodín</string>
    <string name="TRAINING_OF_TRAINER">Odtrénované tréningy</string>
    <string name="SWIMMING_SELECTION">Zobraziť plavecké tréningy</string>
    <string name="ATHLETICS_SELECTION">Zobraziť atletické tréningy</string>
    <string name="CYCLING_SELECTION">Zobraziť cyklistické tréningy</string>
    <string name="ALL_TRAININGS">Zobraziť všetky tréningy</string>
    <string name="NO_TRAININGS">"V daný deň nie sú žiadne z vybraných tréningov."</string>
    <string name="GROUP_NAME">Názov skupiny</string>
    <string name="TRAINER">Tréner</string>
    <string name="NUMBER_OF_ATHLETES">Počet členov skupiny</string>
    <string name="DAY_OF_BIRTH">Dátum narodenia</string>
    <string name="NUMBER_OF_ATHLETES_TRAININGS">Počet účastí na tréningoch</string>
    <string name="ALPHABET_SORTING">Zoradiť abecedne</string>
    <string name="AGE_SORTING">Zoradiť podľa veku</string>
    <string name="NOTE">Poznámka</string>
    <string name="CREATE_GROUP">Vytvoriť skupinu</string>
    <string name="NAME_OF_GROUP">Názov skupiny</string>
    <string name="TIMETABLE">Rozpis tréningov</string>
    <string name="DAY">Deň</string>
    <string name="TIME">Čas</string>
    <string name="PLACE">Miesto tréningu</string>
    <string name="TYPE_OF_SPORT">Druh športu</string>
    <string name="MEMBERS_OF_GROUP">Členovia skupiny</string>
    <string name="STRENGTH">Sila</string>
    <string name="OTHER">Iné</string>
    <string name="CREATE_ATHLETE">Vytvoriť člena</string>
    <string name="ATHLETES_GROUP">Skupina športovca</string>
    <string name="ATHLETES_DAY_OF_BIRTH">Dátum narodenia</string>
    <string name="TRAINERS">Tréneri</string>
    <string name="EDIT_ATTENDANCE">Aktualizovať dochádzku</string>
    <string name="STRENGTH_DB">Strength</string>
    <string name="OTHER_DB">Other</string>
    <string name="CHANGE_ATHLETE_INFORMATION">Upraviť údaje člena</string>
    <string name="CHANGE_GROUP_INFORMATION">Upraviť údaje skupiny</string>
    <string name="ADD_ATHLETE_DESCRIPTION">addNewAthlete</string>
    <string name="TIME_OF_TRAINING_UNIT_DESCRIPTION">timeOfTrainingUnit</string>
    <string name="ADD_TRAINING_UNIT_DESCRIPTION">addTrainingUnit</string>
    <string name="LOGO_DESCRIPTION">appsLogo</string>
    <string name="EDIT_DESCRIPTION">editData</string>
    <string name="ADD_DESCRIPTION">addData</string>
    <string name="DELETE_DESCRIPTION">deleteData</string>
    <string name="GROUP_DESCRIPTION">groupData</string>
    <string name="TRAINER_DESCRIPTION">trainerData</string>
    <string name="TRIATHLON_CLUB_EXTRA">TRIATHLON_CLUB</string>
    <string name="EDIT_ATHLETE_EXTRA">EDIT_ATHLETE</string>
    <string name="GROUP_NOT_ASSIGNED">--nezaradený--</string>
    <string name="REQUIRED_NAME_OF_ATHLETE">Je potrebné zadať meno člena.</string>
    <string name="REQUIRED_SURNAME_OF_ATHLETE">Je potrebné zadať priezvisko člena.</string>
    <string name="NAME_DB">Name</string>
    <string name="SURNAME_DB">Surname</string>
    <string name="GROUP_ID_DB">GroupID</string>
    <string name="NUMBER_OF_TRAININGS_DB">NumberOfTrainings</string>
    <string name="DAY_OF_BIRTH_DB">DayOfBirth</string>
    <string name="ATHLETES_CHILD_DB">Athletes</string>
    <string name="SIGNED_USER_EXTRA">SIGNED_USER</string>
    <string name="SELECTED_FRAGMENT_EXTRA">SELECTED_FRAGMENT</string>
    <string name="EDIT_GROUP_EXTRA">EDIT_GROUP</string>
    <string name="DAY_AND_TIME_TRAINING">dayAndTimeOfTraining</string>
    <string name="TYPE_AND_PLACE_TRAINING">typeAndPlaceOfTraining</string>
    <string name="SPORTING_ATHLETES">Športovci</string>
    <string name="START_SPORTING_ATHLETES">Prípravka</string>
    <string name="BEGINNER_ATHLETES">Začiatočníci</string>
    <string name="REQUIRED_TIME_OF_TRAINING">Je potrebné zvoliť čas tréningu.</string>
    <string name="REQUIRED_LOCATION_OF_TRAINING">Je potrebné zvoliť miesto tréningu.</string>
    <string name="REQUIRED_NAME_OF_GROUP">Skupina musí mať názov.</string>
    <string name="CATEGORY_DB">Category</string>
    <string name="TIMETABLE_DB">Timetable</string>
    <string name="DAY_DB">Day</string>
    <string name="TIME_DB">Time</string>
    <string name="LOCATION_DB">Location</string>
    <string name="TIME_PICKER_TAG">Time picker</string>
    <string name="DELETE_ATHLETE">Odstránenie športovca</string>
    <string name="DELETE_ATHLETE_QUESTION">Ste si istí, že chcete odstrániť daného športovca?</string>
    <string name="YES">Áno</string>
    <string name="NO">Nie</string>
    <string name="MAX_AMOUNT_OF_TRAINERS">Už bol pridaný maximálny počet trénerov.</string>
    <string name="ATTENDANCE_DATA_EXTRA">ATTENDANCE_DATA</string>
    <string name="DELETE_GROUP">Odstránenie skupiny</string>
    <string name="DELETE_GROUP_QUESTION">Ste si istí, že chcete odstrániť danú skupinu?</string>
    <string name="GROUP_NAME_EXTRA">GROUP_NAME</string>
    <string name="ATHLETE_NAME_EXTRA">ATHLETE_NAME</string>
    <string name="TRAINER_NAME_EXTRA">TRAINER_NAME</string>
    <string name="INTERNET_CONNECTION_REQUIRED">Je potrebné internetové pripojenie.</string>
    <string name="TRAINING_DATA">trainingData</string>
    <string name="NAME_OF_ATHLETE_ADAPTER">nameOfAthlete</string>
    <string name="ICON_OF_ATHLETE_ADAPTER">iconOfAthlete</string>
    <string name="GROUP_EXTRA">GROUP</string>
    <string name="TRAINING_UNIT_EXTRA">TRAINING_UNIT</string>
    <string name="DATE_EXTRA">DATE_EXTRA</string>
    <string name="ATTENDANCE_CHILD_DB">Attendance</string>
    <string name="DATE_DB">Date</string>
    <string name="SPORT_DB">Sport</string>
    <string name="ATHLETES_DB">Athletes</string>
    <string name="NOTE_DB">Note</string>
    <string name="TRAINER_DB">Trainer</string>
    <string name="GROUP_CHILD_DB">Groups</string>
    <string name="NAME_OF_GROUP_ADAPTER">nameOfGroup</string>
    <string name="ICON_OF_GROUP_ADAPTER">iconOfGroup</string>
    <string name="TRAINING_OF_TRAINER_ADAPTER">trainingOfTrainer</string>
    <string name="TRAINING_DATA_ADAPTER">trainingData</string>
    <string name="NAME_OF_TRAINER_ADAPTER">nameOfTrainer</string>
    <string name="ICON_OF_TRAINER_ADAPTER">iconOfTrainer</string>
    <string name="NO_TRAININGS_IN_CATEGORY">Skupina nemá v danej kategórii žiadne tréningy.</string>
    <string name="WEEK">Týždeň</string>
    <string name="ATTENDANCE_SUCCESS">Úspešne zadaná dochádzka</string>
    <string name="LOAD_DATA_EXTRA">LOAD_DATA</string>
    <string name="REQUIRED_DAY_OF_BIRTH_OF_ATHLETE">Je potrebné zadať dátum narodenia člena.</string>
    <string name="ATHLETE_ALREADY_EXISTS">Používateľ už v klube existuje.</string>
    <string name="TRAINING_UNIT_REQUIRED">Skupina musí mať aspoň jeden tréning.</string>
    <string name="FIRST_CHILD_DB">FIRST_CHILD</string>
    <string name="SPORT_SELECTION_EXTRA">SPORT_SELECTION</string>
    <string name="SPACE">" "</string>
    <string name="DEVICES_DB">Devices</string>
    <string name="DEVICE_ID_DB">DeviceID</string>
    <string name="THEME_DB">Theme</string>
    <string name="THEME_EXTRA">THEME</string>
    <string name="THEME_OF_USER">Aktuálna téma</string>
    <string name="TRAINERS_DB">Trainers</string>
    <string name="ADMIN_DB">Admin</string>
    <string name="LAST_SIGNED_DATE">LastSignedDate</string>
    <string name="NUMBER_OF_WEEK">NumberOfWeek</string>
    <string name="RECRE_ATHLETES">Rekreační</string>
    <string name="ADULT_ATHLETES">Dospeláci</string>
    <string name="CREATE_TRAINER">Vytvoriť trénera</string>
    <string name="EDIT_TRAINER_EXTRA">EDIT_TRAINER</string>
    <string name="TRAINERS_CHILD_DB">Trainers</string>
    <string name="NUMBER_ATTENDED_OF_ATHLETES">Počet zúčastnených členov</string>
    <string name="FIRST_WEEK">Prvý týždeň školského roka</string>
    <string name="FIRST_WEEK_DB">FirstWeek</string>
    <string name="SWIMMING_SORTING">Zobraziť plavecké tréningy</string>
    <string name="ATHLETICS_SORTING">Zobraziť atletické tréningy</string>
    <string name="CYCLING_SORTING">Zobraziť cyklistické tréningy</string>
    <string name="ALL_SPORT_SORTING">Zobraziť všetky tréningy</string>
    <string name="WEEK_LOW">týždeň</string>
    <string name="ACKNOWLEDGMENT">Potvrdenie</string>
    <string name="CHANGE_OF_FIRST_WEEK">Ste si istý, že chcete zmeniť prvý týždeň školského roka?</string>
</resources>