<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signInConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    android:background="?attr/colorOnBackground"
    android:navigationBarColor="?attr/colorPrimary"
    tools:context=".activities.LogInActivity"
    tools:targetApi="lollipop">

    <ImageView
        android:id="@+id/imageView2"
        style="@style/logoStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tritendence_logo"
        android:contentDescription="@string/LOGO_DESCRIPTION" />

    <EditText
        android:id="@+id/emailSignIn"
        style="@style/textViewBasicStyle"
        android:autofillHints="@string/EMAIL"
        android:hint="@string/EMAIL"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/passwordSIgnIn"
        style="@style/textViewBasicStyle"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/PASSWORD"
        android:hint="@string/PASSWORD"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailSignIn"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/signInBtn"
        style="@style/buttonStyle"
        android:layout_marginTop="45dp"
        android:text="@string/SIGN_IN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordSIgnIn" />

    <TextView
        android:id="@+id/registrationNote"
        style="@style/noteStyle"
        android:layout_marginTop="32dp"
        android:text="@string/REGISTRATION_NOTE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>